--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ api.prefix=/dev/v1
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 # config load automatically
-spring.profiles.active=development
-spring.thymeleaf.cache=false
+#spring.profiles.active=development
+#spring.thymeleaf.cache=false
