--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#config server
+# port 8080 is default port
+server.port=8080
 spring.application.name=laptop-shop
 # config database connect to mysql
 spring.datasource.url=jdbc:mysql://localhost:3308/laptop_shop?useSSL=false&serverTimezone=UTC
@@ -10,8 +13,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #config thymleaf
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
 # config API
 api.prefix=/dev/v1
 # config limit for value
