--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 server.port=8080
 spring.application.name=laptop-shop
 # config database connect to mysql
-spring.datasource.url=jdbc:mysql://localhost:3308/laptop_shop?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/laptop_shop?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # config JPA and Hibernate for query database
 spring.jpa.hibernate.ddl-auto=update
